--- a/Pipfile
+++ b/Pipfile
@@ -1,24 +1,19 @@
 [[source]]
-
 url = "https://pypi.python.org/simple"
 verify_ssl = true
 name = "pypi"
 
-
 [packages]
-
 boto3 = "*"
 markdown = "*"
 flask = "*"
-
 
 [dev-packages]
 pytest = "*"
 pytest-cov = "*"
 pytest-flask = "*"
 pytest-mock = "*"
-
+flake8 = "*"
 
 [requires]
-
 python_version = "3.6"
