ignore NoSuchKey exception
This exception just indicates that content wasn't found

--- a/docker-config/newrelic.ini
+++ b/docker-config/newrelic.ini
@@ -11,7 +11,7 @@ transaction_tracer.explain_enabled = true
 transaction_tracer.explain_threshold = 0.5
 transaction_tracer.function_trace =
 error_collector.enabled = true
-error_collector.ignore_errors =
+error_collector.ignore_errors = botocore.errorfactory:NoSuchKey
 browser_monitoring.auto_instrument = false
 thread_profiler.enabled = true
 distributed_tracing.enabled = false
